# slott-writing-tools

./: .gitignore  README.md  pyproject.toml
docs/: conf.py  index.html  index.rst  miseries.rst
docs/_build/html/: features.html  genindex.html  index.html  language.html  miseries.html  names.html  objects.inv  plot.html  py-modindex.html  search.html  searchindex.js  terrain.html
docs/_build/html/_modules/: collections.html  index.html  language.html
docs/_build/html/_sources/: features.rst.txt  index.rst.txt  language.rst.txt  names.rst.txt  plot.rst.txt  terrain.rst.txt
notebooks/: BooksAndGames.ipynb
output/: t1.html  tarot.html
src/: features.py  language.py  main.py  miseries.py  names.py  plot.py  terrain-tk.py
src/data/: words.py
