[project]
name = "fiction-tools"
version = "0.1.0"
description = "Tools to help writers create fictional worlds"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "invoke>=2.2.0",
    "jupyterlab>=4.3.5",
    "matplotlib>=3.10.1",
    "rich>=13.9.4",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
    "tox>=4.24.1",
    "sphinx>=8.2.3",
]
